GUI improvements, AIS calculation